--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,57 @@
+annotated-types==0.6.0
 app==0.0.1
 asgiref==3.7.2
 bcrypt==4.0.1
 blinker==1.6.2
+blis==0.7.11
+catalogue==2.0.10
+certifi==2023.11.17
+charset-normalizer==3.3.2
 click==8.1.7
+cloudpathlib==0.16.0
+confection==0.1.4
+cymem==2.0.8
 Django==4.2.7
 django-request==1.6.3
 extensions==0.4
-flask==2.3.3
+Flask==2.3.3
 Flask-Bcrypt==1.0.1
 Flask-Login==0.6.2
-flask-sqlalchemy==3.1.1
-flask-wtf==1.2.1
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.1
+idna==3.6
 itsdangerous==2.1.2
 Jinja2==3.1.2
+joblib==1.3.2
 jsonify==0.5
+langcodes==3.3.0
 MarkupSafe==2.1.3
+murmurhash==1.0.10
+nltk==3.8.1
+numpy==1.26.2
+packaging==23.2
 Pillow==10.0.1
+preshed==3.0.9
+pydantic==2.5.2
+pydantic_core==2.14.5
 python-dateutil==2.8.2
+regex==2023.10.3
+requests==2.31.0
 six==1.16.0
+smart-open==6.4.0
+spacy==3.7.2
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
 SQLAlchemy==2.0.22
 sqlparse==0.4.4
-typing-extensions==4.8.0
-werkzeug==2.3.7
-wtforms==3.1.1
+srsly==2.4.8
+thinc==8.2.1
+tqdm==4.66.1
+typer==0.9.0
+typing_extensions==4.8.0
+urllib3==2.1.0
+wasabi==1.1.2
+weasel==0.3.4
+Werkzeug==2.3.7
+WTForms==3.1.1
 xterm==0.7.3
